orgloom-package/force-app/main/default/objects/Audit_Event__c/Audit_Event__c.object-meta.xml
<CustomObject>
    <description>Primary store for data-touching Org Loom audit events in the customer's Salesforce org. One row per event that touches Salesforce data (canvas save / load / share, upload, recall, SF connect/disconnect). Workspace-meta events (permission grants, member changes, plan changes, settings flips) live in Org Loom's own database and are not mirrored here. External_Id__c is the Org Loom server-side event id so re-dispatch on retry is idempotent (UPSERT against this field). Security teams can SOQL or report directly on this object; no Org Loom UI required.</description>
    <label>Orgloom Audit Event</label>
    <pluralLabel>Orgloom Audit Events</pluralLabel>
    <nameField>
        <displayFormat>AE-{0000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>