orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The audit action string (upload, canvas_shared, workspace_member_role_changed, etc.). Matches the value Orgloom uses internally.</description>
    <label>Action</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>