orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Actor_Email__c.field-meta.xml
<CustomField>
    <fullName>Actor_Email__c</fullName>
    <description>Email of the Orgloom account that took the action. Empty for system events.</description>
    <label>Actor Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>