orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Actor_Kind__c.field-meta.xml
<CustomField>
    <fullName>Actor_Kind__c</fullName>
    <description>web = human acting in the Orgloom UI; mcp = AI client acting via MCP; system = server-internal (retention purges, etc.).</description>
    <label>Actor Kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>mcp</fullName>
                <label>MCP (AI client)</label>
            </value>
            <value>
                <fullName>system</fullName>
                <label>System</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>