orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Actor_Sf_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_Sf_User_Id__c</fullName>
    <description>Salesforce User Id (18-char) of the actor who triggered the event. Empty for system events. Use this to join to the User object for reporting; Actor_Email__c also works but the Id is more stable across email changes.</description>
    <label>Actor SF User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>