orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Short identifier for failures and denials (INSUFFICIENT_ACCESS, plan-denied, rate-limit, quota-exceeded, etc.). Empty when Status__c = ok.</description>
    <label>Error Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>