orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>The stable Orgloom Activity History event id. Its unique external-id constraint makes retries idempotent: repeated upserts converge on one Salesforce row.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>