orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Mcp_Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Mcp_Token_Name__c</fullName>
    <description>Non-secret audit display label chosen by the user (for example, "Claude desktop"). This field never stores an MCP bearer token, token hash, credential, or other authentication material. Empty when Actor_Kind__c is not mcp.</description>
    <label>MCP Token Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>