orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Minimized JSON payload with action-specific operational context such as recipient identifiers and record counts. It is not intended to contain Salesforce record values or free-form error messages, and Activity History is not a compliance-grade authoritative audit log.</description>
    <label>Payload (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>