orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Recorded_At__c.field-meta.xml
<CustomField>
    <fullName>Recorded_At__c</fullName>
    <description>When the Orgloom server originally observed the action. Use this for chronological display and delivery reconciliation rather than CreatedDate, which can lag when dispatch is queued or retried.</description>
    <label>Recorded At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>