orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Correlation id linking events from a single user action that fanned out (e.g., a canvas upload that produced one parent event plus N record-insert events all share the same Request Id).</description>
    <label>Request Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>