orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>ok = successful operation; partial = mixed success/failure; failed = attempted but errored; denied = blocked by policy/role/quota.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ok</fullName>
                <default>true</default>
                <label>OK</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>partial</fullName>
                <label>Partial</label>
            </value>
            <value>
                <fullName>denied</fullName>
                <label>Denied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>