orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <description>Identifier of the specific thing acted on: Salesforce record id when applicable, otherwise Orgloom-internal id (canvas id, workspace member account id, mcp token id, etc.).</description>
    <label>Target Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>