orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>What kind of thing the event acted on (canvas, workspace_members, mcp_tokens, Account, Contact, etc.).</description>
    <label>Target Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>