orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Target_Sf_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Sf_Org_Id__c</fullName>
    <description>The Salesforce Organization Id the event targeted. Will normally match the current org id but is stored explicitly so cross-org reports work; useful when a workspace admin has been connected to multiple orgs over time and wants to filter activity by the org that actually saw the write.</description>
    <label>Target SF Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>