orgloom-package/force-app/main/default/objects/Audit_Event__c/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <description>Orgloom workspace id the event happened in. Empty for account-scoped events (e.g., sign-out before a workspace is resolved).</description>
    <label>Workspace Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>