orgloom-package/force-app/main/default/objects/Audit_Event__c/listViews/Canvas_Activity.listView-meta.xml
<ListView>
    <fullName>Canvas_Activity</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Actor_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Id__c</columns>
    <columns>Recorded_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Object__c</field>
        <operation>equals</operation>
        <value>canvas</value>
    </filters>
    <filters>
        <field>Recorded_At__c</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Canvas Activity (30 days)</label>
</ListView>