orgloom-package/force-app/main/default/objects/Audit_Event__c/listViews/Failures_and_Denials.listView-meta.xml
<ListView>
    <fullName>Failures_and_Denials</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Actor_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Recorded_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>ok</value>
    </filters>
    <filters>
        <field>Recorded_At__c</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Failures and Denials (30 days)</label>
</ListView>