orgloom-package/force-app/main/default/objects/Audit_Event__c/listViews/Recent_Activity.listView-meta.xml
<ListView>
    <fullName>Recent_Activity</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Actor_Email__c</columns>
    <columns>Actor_Kind__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Recorded_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recorded_At__c</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Activity (7 days)</label>
</ListView>